--- a/RemoteControlClient/app/src/main/res/layout/test.xml
+++ b/RemoteControlClient/app/src/main/res/layout/test.xml
@@ -1,13 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:background = "#000000"
+    <Button
+        android:id="@+id/addDB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="增加一条Widget数据" />
 
-        />
+    <Button
+        android:id="@+id/readDB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="读取widget数据的JSON格式" />
+
+    <Button
+        android:id="@+id/deleteDB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="删除测试数据" />
+
+    <EditText
+        android:id="@+id/testContent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="输入发送内容" />
+
+    <Button
+        android:id="@+id/sendTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="发送" />
+
+    <Button
+        android:id="@+id/clearLog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="清除输出" />
+
+        <TextView
+            android:id="@+id/logOut"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:maxLines = "18"
+            android:scrollbars="vertical" />
 
 </LinearLayout>
+
+
