--- a/RemoteControlClient/app/src/main/res/layout/activity_panel_view.xml
+++ b/RemoteControlClient/app/src/main/res/layout/activity_panel_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -40,9 +40,32 @@
 
     <RelativeLayout
         android:id="@+id/panelView"
+        android:layout_below="@+id/tab_rl"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </RelativeLayout>
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/menu_ll"
+        android:elevation="5dp"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:visibility="invisible">
+
+        <TextView
+            android:id="@+id/new_widget"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:gravity="center"
+            android:text="添加新控件"
+            android:textColor="#FFFFFF"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
+</RelativeLayout>
