连接页面完工
如题，这是最简单的一个页面了吧（从别人socket工程里面搬过来的MainActivity样子终于改掉了）
另外，之前不小心在总工程目录下开了个测试工程，这个版本移除掉了

--- a/RemoteControlClient/app/src/main/res/layout/activity_panel_list.xml
+++ b/RemoteControlClient/app/src/main/res/layout/activity_panel_list.xml
@@ -14,9 +14,9 @@
             android:id="@+id/btn_back"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
+            android:layout_margin="10dp"
             android:scaleType="fitCenter"
-            android:src="#0F0ABA" />
+            android:src="@drawable/back" />
 
         <TextView
             android:id="@+id/title"
@@ -34,9 +34,9 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
+            android:layout_margin="10dp"
             android:scaleType="fitCenter"
-            android:src="#0F0ABA" />
+            android:src="@drawable/person_normal" />
     </RelativeLayout>
 
     <ListView
