--- a/RemoteControlClient/app/src/main/res/layout/item_panel.xml
+++ b/RemoteControlClient/app/src/main/res/layout/item_panel.xml
@@ -21,5 +21,5 @@
         android:layout_height="40dp"
         android:layout_margin="5dp"
         android:layout_alignParentRight="true"
-        android:src="@color/colorPrimaryDark" />
+        android:src="@drawable/btn_check_off_holo_light" />
 </RelativeLayout>
