--- a/RemoteControlClient/app/src/main/res/layout/dialog_panel_menu.xml
+++ b/RemoteControlClient/app/src/main/res/layout/dialog_panel_menu.xml
@@ -12,7 +12,7 @@
         android:paddingLeft="20dp"
         android:textColor="#000000"
         android:textSize="16sp"
-        android:text="编辑" />
+        android:text="修改" />
 
     <ImageView
         android:layout_width="match_parent"
