--- a/RemoteControlClient/app/src/main/res/layout/item_panel.xml
+++ b/RemoteControlClient/app/src/main/res/layout/item_panel.xml
@@ -7,7 +7,7 @@
     <TextView
         android:id="@+id/panel_name"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/panel_item_height"
         android:gravity="center"
         android:maxLines="1"
         android:layout_marginLeft="20dp"
@@ -17,9 +17,9 @@
 
     <ImageView
         android:id="@+id/btn_select"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_margin="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_margin="10dp"
         android:layout_alignParentRight="true"
         android:src="@drawable/btn_check_off_holo_light" />
 </RelativeLayout>
