--- a/RemoteControlClient/app/src/main/res/layout/activity_panel_list.xml
+++ b/RemoteControlClient/app/src/main/res/layout/activity_panel_list.xml
@@ -5,19 +5,21 @@
     android:orientation="vertical">
 
     <RelativeLayout
-        android:id="@+id/tab_rl"
+        android:id="@+id/title_rl"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="@dimen/title_height"
+        android:background="@color/colorPrimary"
         android:elevation="5dp"
-        android:background="@color/colorPrimary">
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <ImageView
             android:id="@+id/btn_back"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_margin="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:padding="@dimen/btn_back_padding"
             android:scaleType="fitCenter"
-            android:src="@drawable/back" />
+            android:src="@drawable/back_normal" />
 
         <TextView
             android:id="@+id/title"
@@ -32,10 +34,10 @@
 
         <ImageView
             android:id="@+id/btn_edit"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:layout_margin="10dp"
+            android:padding="@dimen/btn_edit_padding"
             android:scaleType="fitCenter"
             android:src="@drawable/edit_normal" />
     </RelativeLayout>
@@ -44,68 +46,124 @@
         android:id="@+id/panel_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/tab_rl"
-        android:layout_marginBottom="50dp">
+        android:layout_below="@+id/title_rl"
+        android:layout_marginBottom="@dimen/menu_height">
 
     </ListView>
 
     <LinearLayout
         android:id="@+id/menu_ll"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#DBDBDB"
-        android:orientation="horizontal"
+        android:layout_height="@dimen/menu_height"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:background="#DBDBDB"
+        android:orientation="horizontal">
 
-        <TextView
+        <LinearLayout
             android:id="@+id/new_panel"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"
+            android:layout_margin="1dp"
             android:layout_weight="1"
             android:background="@color/colorPrimary"
             android:gravity="center"
-            android:text="添加新面板"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp" />
+            android:orientation="horizontal">
 
-        <TextView
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:padding="8dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/new_normal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="添加"
+                android:textColor="#FFFFFF"
+                android:textSize="@dimen/panel_list_menu_font_size" />
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/import_panel"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"
+            android:layout_margin="1dp"
             android:layout_weight="1"
             android:background="@color/colorPrimary"
             android:gravity="center"
-            android:text="导入面板"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp" />
+            android:orientation="horizontal">
 
-        <TextView
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:padding="8dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/import_normal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="导入"
+                android:textColor="#FFFFFF"
+                android:textSize="@dimen/panel_list_menu_font_size" />
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/delete_panel"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"
+            android:layout_margin="1dp"
             android:layout_weight="1"
             android:background="@color/colorPrimary"
+            android:visibility="gone"
             android:gravity="center"
-            android:text="删除面板"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            android:visibility="gone" />
+            android:orientation="horizontal">
 
-        <TextView
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:padding="8dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/delete_normal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="删除"
+                android:textColor="#FFFFFF"
+                android:textSize="@dimen/panel_list_menu_font_size" />
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/export_panel"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"
+            android:layout_margin="1dp"
             android:layout_weight="1"
             android:background="@color/colorPrimary"
+            android:visibility="gone"
             android:gravity="center"
-            android:text="导出面板"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            android:visibility="gone" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:padding="8dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/export_normal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:text="导出"
+                android:textColor="#FFFFFF"
+                android:textSize="@dimen/panel_list_menu_font_size" />
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
