--- a/RemoteControlClient/app/src/main/res/values/dimens.xml
+++ b/RemoteControlClient/app/src/main/res/values/dimens.xml
@@ -2,4 +2,12 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="title_height">50dp</dimen>
+    <dimen name="menu_height">60dp</dimen>
+    <dimen name="btn_back_padding">10dp</dimen>
+    <dimen name="btn_edit_padding">7dp</dimen>
+    <dimen name="menu_btn_padding">8dp</dimen>
+    <dimen name="panel_item_height">50dp</dimen>
+    <dimen name="panel_list_menu_font_size">23sp</dimen>
+
 </resources>
