控件美化完成
调整了一下默认控件的大小
编辑控件页面有待修改

--- a/RemoteControlClient/app/src/main/res/drawable/blue_pressed_background.xml
+++ b/RemoteControlClient/app/src/main/res/drawable/blue_pressed_background.xml
@@ -2,7 +2,8 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#2A5699"
-        android:endColor="#2A5699"
+        android:startColor="@color/dark_blue"
+        android:endColor="@color/dark_blue"
         android:angle="90"/>
+    <corners android:radius="10dp" />
 </shape>
