--- a/RemoteControlClient/app/src/main/res/drawable/blue_released_background.xml
+++ b/RemoteControlClient/app/src/main/res/drawable/blue_released_background.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-        <gradient
-            android:startColor="@color/main_blue"
-            android:endColor="@color/main_blue"
-            android:angle="90"/>
+    <gradient
+        android:angle="90"
+        android:endColor="@color/main_blue"
+        android:startColor="@color/main_blue" />
+    <corners android:radius="10dp" />
 </shape>
