--- a/RemoteControlClient/app/src/main/res/layout/activity_panel_list.xml
+++ b/RemoteControlClient/app/src/main/res/layout/activity_panel_list.xml
@@ -30,7 +30,7 @@
             android:gravity="center"
             android:text="选择面板"
             android:textColor="#FFFFFF"
-            android:textSize="20sp" />
+            android:textSize="@dimen/panel_list_title_font_size" />
 
         <ImageView
             android:id="@+id/btn_edit"
