--- a/RemoteControlClient/app/src/main/res/values/dimens.xml
+++ b/RemoteControlClient/app/src/main/res/values/dimens.xml
@@ -7,7 +7,8 @@
     <dimen name="btn_back_padding">10dp</dimen>
     <dimen name="btn_edit_padding">7dp</dimen>
     <dimen name="menu_btn_padding">8dp</dimen>
+    <dimen name="panel_list_title_font_size">26sp</dimen>
+    <dimen name="panel_title_font_size">26sp</dimen>
     <dimen name="panel_item_height">50dp</dimen>
     <dimen name="panel_list_menu_font_size">23sp</dimen>
-
 </resources>
