修触摸板bug以及组合键编辑页面编写
组合键编辑页面还有bug，并未实装，暂时被注释

--- a/RemoteControlClient/app/src/main/res/layout/activity_edit_widget.xml
+++ b/RemoteControlClient/app/src/main/res/layout/activity_edit_widget.xml
@@ -39,6 +39,11 @@
             android:src="@drawable/delete_normal" />
     </RelativeLayout>
 
+    <!--<chazi.remotecontrol.OrderListView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_below="@id/title_rl"/>-->
+
     <RelativeLayout
         android:id="@+id/button_rl"
         android:layout_width="match_parent"
